# blockchain-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_RULES.md  CONTEXT 2.md  CONTEXT.md  Cargo 2.toml  Cargo.toml  Makefile  README.md  SECURITY_REVIEW.md  TODO.md  blockchain-api.service  blockchain-miner.service  blockchain-node-main.service  blockchain-node.service  deploy.sh  fullnode.service  index.html  install-mainnet.sh  install.ps1  install.sh  nginx-pktscan.conf  pkt-sync.service  pktscan.service
.claude/: settings.local.json
.github/workflows/: build-check.yml  ci.yml  release.yml
crates/pkt-api/: Cargo.toml
crates/pkt-api/src/: main.rs
crates/pkt-cli/: Cargo.toml
crates/pkt-cli/src/: config.rs  main.rs
crates/pkt-sdk/: Cargo.toml
crates/pkt-sdk/src/: convert.rs  error.rs  lib.rs  types.rs
desktop/: RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  api.ts  i18n.ts  main.tsx  theme.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: MiniChart.tsx  Nav.tsx  Panel.tsx  SearchBar.tsx  StatCard.tsx
desktop/src/hooks/: useAnimatedNumber.ts  useLiveDashboard.ts  useSearch.ts  useSettings.ts
desktop/src/pages/: Address.tsx  BlockDetail.tsx  Blocks.tsx  Charts.tsx  Explorer.tsx  Miner.tsx  Node.tsx  RichList.tsx  Settings.tsx  Terminal.tsx  TxDetail.tsx  Wallet.tsx
docs/: api.md  architecture.md  cli.md
frontend/: address.js  app.js  charts.js  detail.js  live.js  style.css  testnet.js
scripts/: build-linux.sh  deploy.sh
sdk-js/: package-lock.json  package.json  tsconfig.json
sdk-js/src/: client.ts  index.ts  types.ts  utils.ts
src/: abi.rs  address_detail.rs  address_index.rs  address_labels.rs  address_watch.rs  ai_agent.rs  api.rs  api_auth.rs  atomic_swap 2.rs  atomic_swap.rs  audit_log.rs  bench.rs  bft.rs  blake3_hash.rs  block.rs  block_detail.rs  block_storage.rs  chain.rs  chain_analytics.rs  chain_concurrent.rs  cli_contract.rs  cli_staking.rs  cli_token.rs  coinjoin 2.rs  coinjoin.rs  confidential.rs  contract_api.rs  contract_deploy.rs  contract_state.rs  covenant.rs  cpu_miner.rs  cuda_kernel.rs  defi.rs  defi_api.rs  deploy_config.rs  devnet.rs  did.rs  dilithium.rs  docs_gen.rs  economics.rs  (+146 more)
web/address/: index.html
web/block/: detail.html  index.html
web/css/: style.css
web/dev/: index.html
web/health/: index.html
web/js/: address-page.js  address.js  app.js  block-detail.js  block-list.js  charts-live.js  health.js  playground.js  rx-detail.js  rx-list.js  shared.js  testnet.js  webhooks.js
web/playground/: index.html
web/rx/: detail.html  index.html
web/webhooks/: index.html
