[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# v0.5
secp256k1 = { version = "0.27", features = ["rand-std", "global-context"] }
ripemd = "0.1"
bs58 = "0.5"
# v0.6
tokio = { version = "1", features = ["full"] }
# v0.8: HD Wallet BIP32/39/44
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
# v4.2.1: RocksDB embedded key-value store
rocksdb = "0.21"
# v4.4: REST API / v8.1: WebSocket live feed
axum = { version = "0.7", features = ["ws"] }
# v5.6: property-based testing
proptest = { version = "1.4", optional = true }
# v5.7: structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# v6.0: BLAKE3 hash engine (3–4x faster than SHA-256 for PoW)
blake3 = "1.5"
# v6.1: CPU multi-thread miner
rayon = "1.10"
num_cpus = "1.16"
# v6.5: OpenCL GPU mining (optional — cargo build --features opencl)
ocl = { version = "0.19", optional = true }
# v6.6: CUDA GPU mining (optional — cargo build --features cuda)
cust = { version = "0.3", optional = true }

[features]
default = []
fuzz = ["proptest"]
opencl = ["dep:ocl"]
cuda = ["dep:cust"]

[dev-dependencies]
proptest = "1.4"
