[workspace]
members = [
    ".",
    "crates/pkt-sdk",
    "crates/pkt-api",
    "crates/pkt-cli",
    "desktop/src-tauri",
]
resolver = "2"

[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# v0.5
secp256k1 = { version = "0.27", features = ["rand-std", "global-context"] }
ripemd = "0.1"
bs58 = "0.5"
# v0.6
tokio = { version = "1", features = ["full"] }
# v0.8: HD Wallet BIP32/39/44
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
# v4.2.1: RocksDB embedded key-value store
rocksdb = "0.21"
# v4.4: REST API / v8.1: WebSocket live feed
axum = { version = "0.7", features = ["ws"] }
# web/: ServeDir runtime file serving (no rebuild needed for CSS/JS/PNG changes)
tower-http = { version = "0.5", features = ["fs"] }
# v10.8: GraphQL read-only API
async-graphql = { version = "7", features = ["tracing"] }
# v10.9: Outbound HTTP webhook delivery
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# v5.6: property-based testing
proptest = { version = "1.4", optional = true }
# v5.7: structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# v6.0: BLAKE3 hash engine (3–4x faster than SHA-256 for PoW)
blake3 = "1.5"
# v6.1: CPU multi-thread miner
rayon = "1.10"
num_cpus = "1.16"
# v6.5: OpenCL GPU mining (optional — cargo build --features opencl)
ocl = { version = "0.19", optional = true }
# v6.6: CUDA GPU mining (optional — cargo build --features cuda)
cust = { version = "0.3", optional = true }
# v9.0.1: Ed25519 HD Wallet (SLIP-0010)
ed25519-dalek = { version = "2", features = ["rand_core"] }
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }
# v14.0: Terminal UI dashboard
ratatui = "0.26"
crossterm = "0.27"
# v14.3: QR Code (pure Rust, không cần libpng)
qrcode = "0.14"
# v16.3: Hot Reload Dev Mode — filesystem watcher
notify = "6"
# v19.5: libp2p P2P transport (TCP + Noise + Yamux + mDNS)
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "mdns", "tokio", "identify", "ping", "macros"] }
futures = "0.3"

[features]
default = []
fuzz = ["proptest"]
integration = []          # v16.2: E2E integration tests (cargo test --features integration)
opencl = ["dep:ocl"]
cuda = ["dep:cust"]

[dev-dependencies]
proptest = "1.4"
