[package]
name = "pkt-cli"
version = "0.1.0"
edition = "2021"
description = "PKT CLI — query PKTScan API từ terminal"

[[bin]]
name = "pkt"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
reqwest     = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
toml        = "0.8"
