[package]
name = "pkt-cli"
version = "0.1.0"
edition = "2021"
description = "PKT CLI — query PKTScan API từ terminal"

[[bin]]
name = "pkt"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
reqwest     = { workspace = true, features = ["blocking"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = "0.8"
