[package]
name = "pktscan-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "pktscan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
blake3 = "1.5"
rayon = "1.10"
hex = "0.4"
secp256k1 = { version = "0.27", features = ["rand-std", "global-context"] }
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
