[package]
name = "pktscan-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "pktscan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde      = { workspace = true }
serde_json = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }
blake3     = { workspace = true }
rayon      = { workspace = true }
hex        = { workspace = true }
secp256k1  = { workspace = true }
sha2       = { workspace = true }
sha3       = "0.10"
hmac       = "0.12"
pbkdf2     = { version = "0.12", features = ["hmac"] }
urlencoding = "2.1"
axum       = { version = "0.7", features = ["ws"] }
pkt_core   = { path = "../..", package = "blockchain-rust" }
